refactore: improve genetic algorithm code