@@ -3,6 +3,7 @@ package org.harmoniapp.geneticalgorithm;
 import lombok.AllArgsConstructor;
 
 import java.util.*;
+import java.util.stream.IntStream;
 
 /**
  * Represents the genetic algorithm used to generate schedules.
@@ -44,7 +45,7 @@ public class GeneticAlgorithm implements Algorithm {
         this.populationSize = 50;
         this.tournamentSize = 10;
         this.maxGenerations = 100000;
-        this.mutationRate = 0.02;
+        this.mutationRate = 0.2;
         this.crossoverRate = 0.6;
         this.constraintChecker = new ConstraintChecker();
         this.random = new Random();
@@ -62,21 +63,15 @@ public class GeneticAlgorithm implements Algorithm {
     @Override
     public Chromosome run(List<Gen> shifts, Map<String, List<Employee>> employees) {
         List<Chromosome> population = initializePopulation(shifts, employees);
-
-        assert !population.isEmpty();
-        Chromosome bestChromosome = population.stream().max(Comparator.comparing(Chromosome::getFitness)).get();
+        Chromosome bestChromosome = getBestChromosome(population);
 
         for (int i = 0; i < maxGenerations; i++) {
             population = evolvePopulation(population, employees);
+            bestChromosome = updateBestChromosome(population, bestChromosome);
 
-            assert !population.isEmpty();
-            Chromosome newBestChromosome = population.stream().max(Comparator.comparing(Chromosome::getFitness)).get();
-            if (newBestChromosome.getFitness() > bestChromosome.getFitness()) {
-                bestChromosome = newBestChromosome;
-            }
-
+            //TODO: Modify this to observation
             if ((i % reportInterval == 0 || bestChromosome.getFitness() == 1) && listener != null) {
-                listener.onGenerationUpdate(i / this.maxGenerations, bestChromosome.getFitness());
+                listener.onGenerationUpdate((double) i / this.maxGenerations, bestChromosome.getFitness());
             }
 
             if (bestChromosome.getFitness() == 1) {
@@ -84,6 +79,19 @@ public class GeneticAlgorithm implements Algorithm {
             }
         }
 
+        return bestChromosome;
+    }
+
+    private Chromosome getBestChromosome(List<Chromosome> population) {
+        assert !population.isEmpty();
+        return population.stream().max(Comparator.comparing(Chromosome::getFitness)).get();
+    }
+
+    private Chromosome updateBestChromosome(List<Chromosome> population, Chromosome bestChromosome) {
+        Chromosome newBestChromosome = getBestChromosome(population);
+        if (newBestChromosome.getFitness() > bestChromosome.getFitness()) {
+            bestChromosome = newBestChromosome;
+        }
         return bestChromosome;
     }
 
@@ -95,11 +103,9 @@ public class GeneticAlgorithm implements Algorithm {
      * @return the initialized population
      */
     private List<Chromosome> initializePopulation(List<Gen> shifts, Map<String, List<Employee>> employees) {
-        List<Chromosome> population = new ArrayList<>(shifts.size());
-        for (int i = 0; i < populationSize; i++) {
-            population.add(generateRandomChromosome(shifts, employees));
-        }
-        return population;
+        return IntStream.range(0, populationSize)
+                .mapToObj(i -> generateRandomChromosome(shifts, employees))
+                .toList();
     }
 
     /**
@@ -110,11 +116,15 @@ public class GeneticAlgorithm implements Algorithm {
      * @return the generated chromosome
      */
     private Chromosome generateRandomChromosome(List<Gen> shifts, Map<String, List<Employee>> employees) {
-        List<Gen> gens = new ArrayList<>(shifts.size());
-        for (Gen shift : shifts) {
-            List<Employee> employeesForShift = selectRandomEmployees(shift.requirements(), employees);
-            gens.add(new Gen(shift.id(), shift.day(), shift.startTime(), employeesForShift, shift.requirements()));
-        }
+        List<Gen> gens = shifts.stream()
+                .map(shift -> new Gen(
+                        shift.id(),
+                        shift.day(),
+                        shift.startTime(),
+                        selectRandomEmployees(shift.requirements(), employees),
+                        shift.requirements()
+                ))
+                .toList();
         return new Chromosome(gens, constraintChecker);
     }
 
@@ -126,12 +136,34 @@ public class GeneticAlgorithm implements Algorithm {
      * @return the evolved population
      */
     private List<Chromosome> evolvePopulation(List<Chromosome> population, Map<String, List<Employee>> employeesByRole) {
-        assert !population.isEmpty();
-        Chromosome best = population.stream().max(Comparator.comparing(Chromosome::getFitness)).get();
+        Chromosome best = getBestChromosome(population);
 
         List<Chromosome> newPopulation = new ArrayList<>(population.size());
+        addBestChromosomes(newPopulation, best);
+        generateOffspring(newPopulation, population, employeesByRole);
+
+        return newPopulation;
+    }
+
+    /**
+     * Adds the best chromosomes to the new population.
+     *
+     * @param newPopulation the new population
+     * @param best          the best chromosome
+     */
+    private void addBestChromosomes(List<Chromosome> newPopulation, Chromosome best) {
         newPopulation.add(best);
         newPopulation.add(best);
+    }
+
+    /**
+     * Generates offspring and adds them to the new population.
+     *
+     * @param newPopulation   the new population
+     * @param population      the current population
+     * @param employeesByRole the list of employees grouped by role
+     */
+    private void generateOffspring(List<Chromosome> newPopulation, List<Chromosome> population, Map<String, List<Employee>> employeesByRole) {
         for (int i = 0; i < populationSize / 2 - 1; i++) {
             Chromosome parent1 = tournamentSelection(population);
             Chromosome parent2 = tournamentSelection(population);
@@ -142,7 +174,6 @@ public class GeneticAlgorithm implements Algorithm {
                 newPopulation.add(child);
             }
         }
-        return newPopulation;
     }
 
     /**
@@ -152,10 +183,9 @@ public class GeneticAlgorithm implements Algorithm {
      * @return the selected chromosome
      */
     private Chromosome tournamentSelection(List<Chromosome> population) {
-        List<Chromosome> tournament = new ArrayList<>(tournamentSize);
-        for (int i = 0; i < tournamentSize; i++) {
-            tournament.add(population.get(random.nextInt(population.size())));
-        }
+        List<Chromosome> tournament = IntStream.range(0, tournamentSize)
+                .mapToObj(i -> population.get(random.nextInt(population.size())))
+                .toList();
         assert !tournament.isEmpty();
         return tournament.stream().max(Comparator.comparing(Chromosome::getFitness)).get();
     }
@@ -169,7 +199,7 @@ public class GeneticAlgorithm implements Algorithm {
      */
     private List<Chromosome> crossover(Chromosome parent1, Chromosome parent2) {
         if (random.nextDouble() > crossoverRate) {
-            return Arrays.asList(parent1, parent2);
+            return List.of(parent1, parent2);
         }
 
         List<Gen> gens1 = parent1.getGens();
@@ -185,7 +215,7 @@ public class GeneticAlgorithm implements Algorithm {
                 childGens2.add(gens2.get(i));
             }
         }
-        return Arrays.asList(new Chromosome(childGens1, constraintChecker), new Chromosome(childGens2, constraintChecker));
+        return List.of(new Chromosome(childGens1, constraintChecker), new Chromosome(childGens2, constraintChecker));
     }
 
     /**
@@ -195,6 +225,7 @@ public class GeneticAlgorithm implements Algorithm {
      * @param employees  the list of employees to mutate the chromosome from
      * @return the mutated chromosome
      */
+    //TODO: sometimes is throwing an exception
     private Chromosome mutate(Chromosome chromosome, Map<String, List<Employee>> employees) {
         List<Gen> gens = chromosome.getGens();
         for (int i = 0; i < gens.size(); i++) {
@@ -216,20 +247,45 @@ public class GeneticAlgorithm implements Algorithm {
      */
     private List<Employee> selectRandomEmployees(List<Requirements> requirements, Map<String, List<Employee>> employees) {
         List<Employee> employeesForShift = new ArrayList<>();
-        for (Requirements req : requirements) {
-            if (!employees.containsKey(req.role())) {
-                throw new IllegalArgumentException("No employees with role " + req.role());
-            }
-            if (employees.get(req.role()).size() < req.employeesNumber()) {
-                throw new IllegalArgumentException("Not enough employees with role " + req.role());
-            }
-            List<Employee> copy = new ArrayList<>(employees.get(req.role()));
-            for (int j = 0; j < req.employeesNumber(); j++) {
-                int randomIndex = random.nextInt(copy.size());
-                employeesForShift.add(copy.get(randomIndex));
-                copy.remove(randomIndex);
-            }
-        }
+        requirements.forEach(req -> {
+            validateEmployeesAvailability(req, employees);
+            employeesForShift.addAll(selectEmployeesForRequirement(req, employees));
+        });
         return employeesForShift;
+    }
+
+    /**
+     * Validates the availability of employees for a given requirement.
+     *
+     * @param req       the requirements for the shift
+     * @param employees the list of employees grouped by role
+     * @throws IllegalArgumentException if no employees with the required role are available
+     *                                  or if there are not enough employees with the required role
+     */
+    private void validateEmployeesAvailability(Requirements req, Map<String, List<Employee>> employees) {
+        if (!employees.containsKey(req.role())) {
+            throw new IllegalArgumentException("No employees with role " + req.role());
+        }
+        if (employees.get(req.role()).size() < req.employeesNumber()) {
+            throw new IllegalArgumentException("Not enough employees with role " + req.role());
+        }
+    }
+
+    /**
+     * Selects employees for a given requirement.
+     *
+     * @param req       the requirements for the shift
+     * @param employees the list of employees grouped by role
+     * @return the selected employees
+     */
+    private List<Employee> selectEmployeesForRequirement(Requirements req, Map<String, List<Employee>> employees) {
+        List<Employee> selectedEmployees = new ArrayList<>();
+        List<Employee> availableEmployees = new ArrayList<>(employees.get(req.role()));
+        for (int j = 0; j < req.employeesNumber(); j++) {
+            int randomIndex = random.nextInt(availableEmployees.size());
+            selectedEmployees.add(availableEmployees.get(randomIndex));
+            availableEmployees.remove(randomIndex);
+        }
+        return selectedEmployees;
     }
 }
